src/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Account_License_Type__c</fullName>
        <label>Account License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Mortgage Broker/Lender/Servicer Registrant</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage Broker/Lender License</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage Broker/Lender Registrant</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage Broker License</fullName>
                </value>
                <value>
                    <fullName>2nd Mortgage Broker/Lender Registrant</fullName>
                </value>
                <value>
                    <fullName>BFI - Mortgage Lender/Servicer License</fullName>
                </value>
                <value>
                    <fullName>BRE - Real Estate Corporation License Endorsement</fullName>
                </value>
                <value>
                    <fullName>Broker License</fullName>
                </value>
                <value>
                    <fullName>Combination Mortgage Banker-Broker-Servicer License</fullName>
                </value>
                <value>
                    <fullName>Company License</fullName>
                </value>
                <value>
                    <fullName>Consumer Credit License</fullName>
                </value>
                <value>
                    <fullName>Consumer Loan Company License</fullName>
                </value>
                <value>
                    <fullName>Correspondent Residential Mortgage Lender License</fullName>
                </value>
                <value>
                    <fullName>DBO - Finance Lenders Law License</fullName>
                </value>
                <value>
                    <fullName>DBO - Residential Mortgage Lending Act License</fullName>
                </value>
                <value>
                    <fullName>DFI - Mortgage Lending License</fullName>
                </value>
                <value>
                    <fullName>DFI - Residential First Mortgage Notification</fullName>
                </value>
                <value>
                    <fullName>DRE - Mortgage Entity License</fullName>
                </value>
                <value>
                    <fullName>Lender License</fullName>
                </value>
                <value>
                    <fullName>Loan Broker License</fullName>
                </value>
                <value>
                    <fullName>Money Broker License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Banker License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Banker Registration</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker/Lender License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker/Processor License/Registration</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker Act Certificate of Registration</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker Act Mortgage Banker Exemption</fullName>
                </value>
                <value>
                    <fullName>Mortgage Brokerage License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_License_Type__c</fullName>
        <label>Contact License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loan Officer License</fullName>
                </value>
                <value>
                    <fullName>BRE - Real Estate Broker License Endorsement</fullName>
                </value>
                <value>
                    <fullName>DFI - Mortgage Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Originator License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Agent License</fullName>
                </value>
                <value>
                    <fullName>Qualified Individual Residential Mortgage Lender License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loan Originators License</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker Act Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>BFI - Mortgage Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>SML - Mortgage Loan Originator</fullName>
                </value>
                <value>
                    <fullName>DRE - Lending Manager License</fullName>
                </value>
                <value>
                    <fullName>Real Estate Salesperson License Endorsement</fullName>
                </value>
                <value>
                    <fullName>Mortgae Loan Originator</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loan Act Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>Designated Broker Registration</fullName>
                </value>
                <value>
                    <fullName>Qualified Individual Correspondent Residental Mortgage Lender License</fullName>
                </value>
                <value>
                    <fullName>Qualified Individual Residential Mortgage Broker License</fullName>
                </value>
                <value>
                    <fullName>DBO - Mortgage Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>SOS - Loan Originator License</fullName>
                </value>
                <value>
                    <fullName>SOS - Principal Manager License</fullName>
                </value>
                <value>
                    <fullName>BRE - Real Estate Salesperson License Endorsement</fullName>
                </value>
                <value>
                    <fullName>BRE - Mortgage Loan Originator License</fullName>
                    <isActive>false</isActive>
                    <label>BRE - Mortgage Loan Originator License</label>
                </value>
                <value>
                    <fullName>BRE- Real Estate Salesperson License Endorsement</fullName>
                    <isActive>false</isActive>
                    <label>BRE- Real Estate Salesperson License Endorsement</label>
                </value>
                <value>
                    <fullName>Mortgage Loan Originator</fullName>
                    <isActive>false</isActive>
                    <label>Mortgage Loan Originator</label>
                </value>
                <value>
                    <fullName>Qualified Individual Correspondent Residential Mortgage Lender License</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Individual Correspondent Residential Mortgage Lender License</label>
                </value>
                <value>
                    <fullName>Real Estate Broker License Endorsement</fullName>
                    <isActive>false</isActive>
                    <label>Real Estate Broker License Endorsement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Expiration__c</fullName>
        <label>License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Issued_Date__c</fullName>
        <label>License Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Business Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Licensees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Branch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Related_Account__c</field>
                <operation>equals</operation>
                <valueField>Branches__c.Business_Partners_Acc__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Branches__c</referenceTo>
        <relationshipLabel>State Licenses</relationshipLabel>
        <relationshipName>State_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Business Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Related_Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>State Licenses</relationshipLabel>
        <relationshipName>Licensees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Related_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Related_Contact__r.Office_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORMS_AE__c</fullName>
        <formula>Related_Account__r.Owner.FUll_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORMS AE</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Read</externalSharingModel><label>State License</label><nameField>
        <displayFormat>LIC-{00000}</displayFormat>
        <label>License ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>State Licenses</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
    <listViews>
        <fullName>All_Licenses</fullName>
        <columns>NAME</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>License_Number__c</columns>
        <columns>License_Expiration__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Licenses</label>
    </listViews>
    <listViews>
        <fullName>HI_State_Licenses</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact_License_Type__c</columns>
        <columns>License_Number__c</columns>
        <columns>License_Type__c</columns>
        <columns>State__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Related_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Hawaii</value>
        </filters>
        <label>HI State Licenses</label>
        <sharedTo>
            <role>Account_Executive_Lead</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Branch_Licenses</fullName>
        <active>true</active>
        <label>Branch Licenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Licenses</fullName>
        <active>true</active>
        <label>Individual Licenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Licenses</fullName>
        <active>true</active>
        <label>Partner Licenses</label>
    </recordTypes>
    <validationRules>
        <fullName>Account_License_Type_Required</fullName>
        <active>true</active>
        <description>License type is required for certain states, for Partner Record Type</description>
        <errorConditionFormula>AND( 
$RecordType.Name = "Partner Licenses", 
ISPICKVAL(Account_License_Type__c,""), 
OR( 
ISPICKVAL( State__c , "Alabama"), 
ISPICKVAL( State__c , "Alaska"), 
ISPICKVAL( State__c , "Arizona"),
ISPICKVAL( State__c , "Arkansas"), 
ISPICKVAL( State__c , "California"), 
ISPICKVAL( State__c , "Colorado"), 
ISPICKVAL( State__c , "Connecticut"), 
ISPICKVAL( State__c , "Delaware"), 
ISPICKVAL( State__c , "District Of Columbia"),
ISPICKVAL( State__c , "Florida"), 
ISPICKVAL( State__c , "Georgia"), 
ISPICKVAL( State__c , "Hawaii"), 
ISPICKVAL( State__c , "Idaho"), 
ISPICKVAL( State__c , "Illinois"), 
ISPICKVAL( State__c , "Indiana"), 
ISPICKVAL( State__c , "Iowa"), 
ISPICKVAL( State__c , "Kansas"), 
ISPICKVAL( State__c , "Kentucky"),
ISPICKVAL( State__c , "Louisiana"), 
ISPICKVAL( State__c , "Maine"), 
ISPICKVAL( State__c , "Maryland"), 
ISPICKVAL( State__c , "Massachusetts"), 
ISPICKVAL( State__c , "Michigan"), 
ISPICKVAL( State__c , "Minnesota"), 
ISPICKVAL( State__c , "Mississippi"), 
ISPICKVAL( State__c , "Missouri"), 
ISPICKVAL( State__c , "Montana"), 
ISPICKVAL( State__c , "Nebraska"),
ISPICKVAL( State__c , "Nevada"), 
ISPICKVAL( State__c , "New Hampshire"), 
ISPICKVAL( State__c , "New Jersey"),
ISPICKVAL( State__c , "New Mexico"),
ISPICKVAL( State__c , "New York"),
ISPICKVAL( State__c , "North Carolina"), 
ISPICKVAL( State__c , "North Dakota"), 
ISPICKVAL( State__c , "Ohio"), 
ISPICKVAL( State__c , "Oklahoma"),
ISPICKVAL( State__c , "Oregon"), 
ISPICKVAL( State__c , "Pennsylvania"),
ISPICKVAL( State__c , "Rhode Island"), 
ISPICKVAL( State__c , "South Carolina"), 
ISPICKVAL( State__c , "South Dakota"), 
ISPICKVAL( State__c , "Tennessee"), 
ISPICKVAL( State__c , "Texas"), 
ISPICKVAL( State__c , "Utah"), 
ISPICKVAL( State__c , "Virginia"), 
ISPICKVAL( State__c , "Washington"), 
ISPICKVAL( State__c , "Wisconsin"), 
ISPICKVAL( State__c , "Wyoming") 
) 
)</errorConditionFormula>
        <errorDisplayField>Account_License_Type__c</errorDisplayField>
        <errorMessage>License Type is required for this State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_License_Type_Required</fullName>
        <active>true</active>
        <description>License type is required for certain states, for Individual Record Type</description>
        <errorConditionFormula>AND( 
$RecordType.Name = "Individual Licenses",
ISPICKVAL(Contact_License_Type__c,""), 
OR( 
ISPICKVAL( State__c , "Alabama"), 
ISPICKVAL( State__c , "Alaska"), 
ISPICKVAL( State__c , "Arizona"), 
ISPICKVAL( State__c , "Arkansas"), 
ISPICKVAL( State__c , "California"), 
ISPICKVAL( State__c , "Colorado"), 
ISPICKVAL( State__c , "Connecticut"), 
ISPICKVAL( State__c , "Delaware"), 
ISPICKVAL( State__c , "District Of Columbia"), 
ISPICKVAL( State__c , "Florida"), 
ISPICKVAL( State__c , "Georgia"), 
ISPICKVAL( State__c , "Hawaii"), 
ISPICKVAL( State__c , "Idaho"), 
ISPICKVAL( State__c , "Illinois"), 
ISPICKVAL( State__c , "Indiana"), 
ISPICKVAL( State__c , "Iowa"), 
ISPICKVAL( State__c , "Kansas"), 
ISPICKVAL( State__c , "Louisiana"),  
ISPICKVAL( State__c , "Maryland"), 
ISPICKVAL( State__c , "Massachusetts"), 
ISPICKVAL( State__c , "Michigan"), 
ISPICKVAL( State__c , "Minnesota"), 
ISPICKVAL( State__c , "Mississippi"), 
ISPICKVAL( State__c , "Montana"), 
ISPICKVAL( State__c , "Nevada"),  
ISPICKVAL( State__c , "New Jersey"), 
ISPICKVAL( State__c , "New Mexico"), 
ISPICKVAL( State__c , "New York"), 
ISPICKVAL( State__c , "North Carolina"), 
ISPICKVAL( State__c , "North Dakota"), 
ISPICKVAL( State__c , "Ohio"), 
ISPICKVAL( State__c , "Oklahoma"), 
ISPICKVAL( State__c , "Oregon"), 
ISPICKVAL( State__c , "Pennsylvania"), 
ISPICKVAL( State__c , "Rhode Island"), 
ISPICKVAL( State__c , "South Carolina"), 
ISPICKVAL( State__c , "Tennessee"), 
ISPICKVAL( State__c , "Texas"), 
ISPICKVAL( State__c , "Utah"), 
ISPICKVAL( State__c , "Virginia"), 
ISPICKVAL( State__c , "Washington")
) 
)</errorConditionFormula>
        <errorDisplayField>Contact_License_Type__c</errorDisplayField>
        <errorMessage>License Type is required for this State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISBLANK(License_Number__c),
    OR(
	ISPICKVAL( State__c , "Alabama"),
	ISPICKVAL( State__c , "Alaska"),
	ISPICKVAL( State__c , "Arizona"),
	ISPICKVAL( State__c , "California"),
	ISPICKVAL( State__c , "Colorado"),
	ISPICKVAL( State__c , "Connecticut"),
	ISPICKVAL( State__c , "Delaware"),
	ISPICKVAL( State__c , "Florida"),
	ISPICKVAL( State__c , "Georgia"),
	ISPICKVAL( State__c , "Hawaii"),
	ISPICKVAL( State__c , "Idaho"),
	ISPICKVAL( State__c , "Illinois"),
	ISPICKVAL( State__c , "Indiana"),
	ISPICKVAL( State__c , "Iowa"),
	ISPICKVAL( State__c , "Kansas"),
	ISPICKVAL( State__c , "Kentucky"),
	ISPICKVAL( State__c , "Maine"),
	ISPICKVAL( State__c , "Maryland"),
	ISPICKVAL( State__c , "Massachusetts"),
	ISPICKVAL( State__c , "Michigan"),
	ISPICKVAL( State__c , "Minnesota"),
	ISPICKVAL( State__c , "Mississippi"),
	ISPICKVAL( State__c , "Missouri"),
	ISPICKVAL( State__c , "Montana"),
        ISPICKVAL( State__c , "Nebraska"),
	ISPICKVAL( State__c , "Nevada"),
	ISPICKVAL( State__c , "New Hampshire"),
	ISPICKVAL( State__c , "North Carolina"),
	ISPICKVAL( State__c , "North Dakota"),
	ISPICKVAL( State__c , "Ohio"),
	ISPICKVAL( State__c , "Oklahoma"),
	ISPICKVAL( State__c , "Pennsylvania"),
	ISPICKVAL( State__c , "South Carolina"),
	ISPICKVAL( State__c , "South Dakota"),
	ISPICKVAL( State__c , "Tennessee"),
	ISPICKVAL( State__c , "Utah"),
	ISPICKVAL( State__c , "Vermont"),
	ISPICKVAL( State__c , "Virginia"),
	ISPICKVAL( State__c , "Washington"),
	ISPICKVAL( State__c , "West Virginia"),
	ISPICKVAL( State__c , "Wisconsin"),
	ISPICKVAL( State__c , "Wyoming")
    )
)</errorConditionFormula>
        <errorDisplayField>License_Number__c</errorDisplayField>
        <errorMessage>License Number cannot be blank for this State.</errorMessage>
    </validationRules>
</CustomObject>